# da4-term-project

./: .env  .gitignore  README.md  pyproject.toml
data/analysis_data/: daily_edge_attributes.parquet  daily_vertex_attributes.parquet
data/input_graph_data/: stop_lines_df.parquet  stop_lines_uninterpolate_df.parquet
data/working/: scraped_weather_data.parquet
data/working/full_transit_graphs/: gtfs_graph_complementary.pkl  line_shape_graph.pkl  line_shape_graph_undirected.pkl  line_shape_graph_uninterpolated.pkl
mav_analysis/: analysis.ipynb  fixed_differences_models.html  reproduce_preprocessing_steps.py  weather_data_enrichment.py
mav_analysis/graph_analyzer/: full_transit_graph_comparer.py
mav_analysis/physical_routes_fetcher/utils/: shape_interpolator.py
mav_analysis/preprocessing_pipeline/: align_schedule_to_graph.py  download_mav_scrape_data.py  feature_table_finalization.py  gather_input_graph_data.py  reproduce_preprocessing_steps.py  test_meteostat_stations.py  weather_data_enrichment.py
mav_analysis/preprocessing_pipeline/graph_analyzer/: full_transit_graph_comparer.py
mav_analysis/preprocessing_pipeline/graph_analyzer/utils/: graph_visualizer.py
mav_analysis/preprocessing_pipeline/physical_routes_fetcher/: fetch_shape_routes.py
results/map_graph_visualizations/: gtfs_complementary.html  line_shape_complementary.html  line_shape_map.html  line_shape_map_uninterpolated.html
